# swagger/swagger.yml
@@ -247,6 +247,24 @@ paths:
             $ref: '#/definitions/models.SolicitudRp'
         "403":
           description: :id is empty
+  /registro_presupuestal/GetSolicitudesRpById/{id}:
+    get:
+      tags:
+      - registro_presupuestal
+      description: get GetSolicitudesRpById by id
+      operationId: RegistroPresupuestalController.GetSolicitudesRpById
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.SolicitudRp'
+        "403":
+          description: :id is empty
 definitions:
   models.Apropiacion:
     title: Apropiacion
@@ -679,6 +697,8 @@ definitions:
         format: int64
       Compromiso:
         $ref: '#/definitions/models.Compromiso'
+      DatosSolicitud:
+        $ref: '#/definitions/models.SolicitudRp'
       Estado:
         $ref: '#/definitions/models.EstadoRegistroPresupuestal'
       FechaMovimiento:
@@ -691,6 +711,9 @@ definitions:
         type: integer
         format: int64
       Responsable:
+        type: integer
+        format: int64
+      Solicitud:
         type: integer
         format: int64
       UnidadEjecutora:
